--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [12.x]
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
@@ -44,76 +44,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ecency/vision:latest
+          tags: pspc/ecency-boilerplate:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
-
-  deploy-EU:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-    - name: SSH and deploy node app
-      uses: appleboy/ssh-action@master
-      env:
-        USE_PRIVATE: ${{secrets.USE_PRIVATE}}
-        REDIS_URL: ${{secrets.REDIS_URL}}
-      with:
-        host: ${{ secrets.SSH_HOST_EU }}
-        username: ${{ secrets.SSH_USERNAME }}
-        key: ${{ secrets.SSH_KEY }}
-        port: ${{ secrets.SSH_PORT }}
-        envs: USE_PRIVATE, REDIS_URL
-        script: |
-          export USE_PRIVATE=$USE_PRIVATE
-          export REDIS_URL=$REDIS_URL
-          cd ~/vision-production
-          git pull origin master
-          docker pull ecency/vision:latest
-          docker stack deploy -c docker-compose.yml -c docker-compose.production.yml vis
-
-  deploy-US:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-    - name: SSH and deploy node app
-      uses: appleboy/ssh-action@master
-      env:
-        USE_PRIVATE: ${{secrets.USE_PRIVATE}}
-        REDIS_URL: ${{secrets.REDIS_URL}}
-      with:
-        host: ${{ secrets.SSH_HOST_US }}
-        username: ${{ secrets.SSH_USERNAME }}
-        key: ${{ secrets.SSH_KEY }}
-        port: ${{ secrets.SSH_PORT }}
-        envs: USE_PRIVATE, REDIS_URL
-        script: |
-          export USE_PRIVATE=$USE_PRIVATE
-          export REDIS_URL=$REDIS_URL
-          cd ~/vision-production
-          git pull origin master
-          docker pull ecency/vision:latest
-          docker stack deploy -c docker-compose.yml -c docker-compose.production.yml vision
-
-  deploy-SG:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-    - name: SSH and deploy node app
-      uses: appleboy/ssh-action@master
-      env:
-        USE_PRIVATE: ${{secrets.USE_PRIVATE}}
-        REDIS_URL: ${{secrets.REDIS_URL}}
-      with:
-        host: ${{ secrets.SSH_HOST_SG }}
-        username: ${{ secrets.SSH_USERNAME }}
-        key: ${{ secrets.SSH_KEY }}
-        port: ${{ secrets.SSH_PORT }}
-        envs: USE_PRIVATE, REDIS_URL
-        script: |
-          export USE_PRIVATE=$USE_PRIVATE
-          export REDIS_URL=$REDIS_URL
-          cd ~/vision-production
-          git pull origin master
-          docker pull ecency/vision:latest
-          docker stack deploy -c docker-compose.yml -c docker-compose.production.yml vision
