--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -8,22 +8,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [12.x]
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install, lint and/or test
-      run: |
-        yarn
-        cd src/desktop
-        yarn
-        cd ../../
-        yarn test --runInBand --updateSnapshot
-      env:
-        CI: true
   build:
     needs: tests
     runs-on: ubuntu-latest
@@ -44,30 +35,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ecency/vision:development
+          tags: pspc/ecency-boilerplate:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-    - name: SSH and deploy node app
-      uses: appleboy/ssh-action@master
-      env:
-        USE_PRIVATE: ${{secrets.USE_PRIVATE}}
-        REDIS_URL: ${{secrets.REDIS_URL}}
-      with:
-        host: ${{ secrets.SSH_STAGING_HOST }}
-        username: ${{ secrets.SSH_USERNAME }}
-        key: ${{ secrets.SSH_KEY }}
-        port: ${{ secrets.SSH_PORT }}
-        envs: USE_PRIVATE, REDIS_URL
-        script: |
-          export USE_PRIVATE=$USE_PRIVATE
-          export REDIS_URL=$REDIS_URL
-          cd ~/vision-staging
-          git pull origin development
-          docker pull ecency/vision:development
-          docker stack deploy -c docker-compose.yml vision
