--- a/.github/workflows/sync_parent.yml
+++ b/.github/workflows/sync_parent.yml
@@ -1,15 +1,16 @@
-name: Sync Fork
-
+name: sync-fork
 on:
   schedule:
-    - cron: '0 0 * * *' # every 30 minutes
-  workflow_dispatch: # on button click
-
+    - cron: '0 0 * * *'
+  workflow_dispatch: { }
 jobs:
   sync:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write
     steps:
-      - uses: anatawa12/fork-sync-all-branches@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+      - run: gh repo sync $REPOSITORY -b $BRANCH_NAME
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REPOSITORY: ${{ github.repository }}
+          BRANCH_NAME: ${{ github.ref_name }}
