--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -18,3 +18,24 @@ jobs:
   build:
     needs: tests
     runs-on: ubuntu-latest
+    steps:
+      - name: Check Out Repo
+        uses: actions/checkout@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          file: ./Dockerfile
+          push: true
+          tags: pspc/ecency-boilerplate:latest
+
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
