--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "diff-match-patch": "^1.0.5",
     "express": "^4.17.3",
     "graphql": "^16.7.1",
-    "history": "^4.7.2",
+    "history": "4.7.2",
     "hive-uri": "^0.2.3",
     "hivesigner": "^3.2.8",
     "html-react-parser": "^1.2.1",
@@ -101,6 +101,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/diff-match-patch": "^1.0.32",
     "@types/express": "^4.17.0",
+    "@types/history": "4.7.2",
     "@types/jest": "^26.0.24",
     "@types/js-cookie": "^2.2.6",
     "@types/js-md5": "^0.7.0",
